# iMEM

./: README.rst  cute.py  setup.cfg
docs/: index.rst
imem/: __init__.py
test/: test_functional.py
