[metadata]
name = imem
version = 0.0.1
description = A Python module to read and create iMEM files, internationalized memes.
author = manxu
author_email = manxu@mrgazz.com

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English (United States)
	Programming Language :: Python :: 3.6
	Topic :: Multimedia :: Graphics :: Graphics Conversion
	
keywords = png, imem, image, convert
license = MIT
long_description = file: README.rst
url = https://github.com/manxu/iMEM

[options]
zip_safe = True
packages = find:

[options.packages.find]
exclude = test

[bdist_wheel]
universal = True

[vpip]
command_fallback = python cute.py
